@@ -9,6 +9,7 @@ Tested on Motorola Vip : 1960 (with and without HDD), 1910, 1903.
 	Fixed crash when no EPG and users presses up/down
 	Small fixes OSD display, Schedule, SwitchTimer
 	Small fix to make it work on 19x3. (Looks like 19x0 auto selects right font)
+	Pressing record start Instant server recording.
 
 0.16	EPG/schedule info remove on channel switch
 	Exit Guide View removes epg/schedule info
